--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.4",
+    "@rails/actioncable": "^7.0.4",
     "cable_ready": "4.5.0",
     "esbuild": "^0.15.12"
   },
